samples/shrubbery/examples/failing/emptyBlockAfterParen.shrub
bad_empty(x :: Int, y :: Int):
